fix: disable zero amount and scrollbar

--- a/india_compliance/gst_india/print_format/e_invoice/e_invoice.css
+++ b/india_compliance/gst_india/print_format/e_invoice/e_invoice.css
@@ -7,3 +7,7 @@
 	margin-bottom: 10px;
 	font-weight: bold;
 }
+
+.print-format .hide-scrollbar::-webkit-scrollbar{
+	display: none;
+}
